<resources>
    <string name="app_name">islnd</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_post">ViewPostActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_view_friends">ViewFriendsActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="add_comment">Add Comment</string>
    <string name="new_post_hint">Whatcha got?</string>
    <string name="empty_string_post">Cannot submit empty post!</string>
    <string name="empty_comment_post">Cannot submit empty comment!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_user_name">UserName</string>
    <string name="search_friends_hint">Search friends</string>
    <string name="search">Search</string>
    <string name="about_me">About me</string>
    <string name="profile_saved">Profile saved</string>
    <string name="select_image">Select Image</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_post">Delete post</string>
    <string name="dialog_delete_post">Do you want to delete your post?</string>
    <string name="delete_comment">Delete comment</string>
    <string name="dialog_delete_comment">Do you want to delete your comment?</string>
    <string name="post_id_key">post_id</string>
    <string name="private_key">PRIVATE_KEY</string>
    <string name="public_key">PUBLIC_KEY</string>
    <string name="group_key">group_key</string>
    <string name="server_time_offset">server_time_offset</string>
    <string name="get_qr_code">Get Friend\'s QR Code</string>
    <string name="show_qr_code">Show this to your friend</string>
    <string name="dialog_title_add_friend_action">Pick Add Friend Action</string>
    <string name="title_activity_show_qr">ShowQRActivity</string>
    <string name="dialog_title_sms_add_friend">Add friend with SMS</string>
    <string name="sms_disclaimer">Disclaimer: Standard text messaging rates may apply</string>
    <string name="send">send</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_friend_notification">New Friend</string>
    <string name="request_sms_send_explanation">SMS permissions are needed to allow user with SMS</string>
    <string name="request_contact_explanation">Contact permissions are needed to get contact number</string>
    <string name="previous_profile_version_key">previous_profile_version</string>
    <string name="api_key">api_key</string>
    <string name="fragment_delete_post">fragment_delete_post</string>
    <string name="fragment_delete_comment">fragment_delete_comment</string>
    <string name="content_authority">io.islnd.android.islnd.app.database</string>
    <string name="sync_account_type">islnd.io</string>
    <string name="sync_account">islnd_sync_account</string>
    <string name="nav_feed_title">Feed</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_friends_title">Friends</string>
    <string name="nav_qr_title">QR code</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_add_friend">Add Friend</string>
    <string name="event_id">event_id</string>
    <string name="title_activity_settings">Settings</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="day_night_theme">DayNight</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_default_value">1</string>
    <string name="pref_appearance_title">Appearance</string>
    <string name="pref_appearance_summary">Application theme</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_server_summary">API key</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_account_summary">Delete account</string>
    <string name="pref_api_key_title">API Key</string>
    <string name="pref_api_key_summary">Used with password protected server</string>
    <string name="pref_delete_account_title">Delete Account</string>
    <string name="pref_delete_account_summary">Removes all data and settings from device</string>
    <string name="dialog_title_restart_settings">Restart settings</string>
    <string name="dialog_restart_settings">Settings must restart to apply change. Restart now?</string>
    <string name="view_friends_fragment">Friends</string>
    <string name="dialog_discard_profile_changes">Do you want to discard profile changes?</string>
    <string name="discard">Discard</string>
    <string name="display_name">Display Name</string>
    <string name="has_created_account">has_created_account</string>
    <string name="create_account_welcome_message">Welcome</string>
    <string name="create_account_text">Create Account</string>
    <string name="api_key_string">API Key</string>
    <string name="uses_api_key">uses_api_key</string>
    <string name="create_account_summary_message">Pick your display name and we\'ll generate your keys</string>
    <string name="please_wait_title">Please wait</string>
    <string name="verifying_api_key_message">Verifying API Key&#8230;</string>
    <string name="invalid_api_key">Invalid API Key</string>
    <string name="comment_id_key">comment_id</string>
    <string name="creating_identity_message">Creating identity…</string>
    <string name="added_new_friend_message">Added new friend!</string>
    <string name="already_friends_message">We are already friends!</string>
    <string name="dialog_title_delete_account">WARNING</string>
    <string name="dialog_delete_account">All data will be deleted from device. You will no longer have access to account.</string>
    <string name="delete_button">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="notification_comment_content">commented on your post</string>
    <string name="notification_new_friend_content">is now your friend</string>
    <string name="post_does_not_exist">Post does not exist</string>
    <string name="message_id">message_id</string>
    <string name="notification_big_content_title">new islnd notifications</string>
    <string name="notification_big_content_title_single">1 new islnd notification</string>
    <string name="view_identity">View Identity</string>
    <string name="notification_badge">notification_badge</string>
    <string name="notification_badge_99_plus">99+</string>
    <string name="sms_add_self_message">Are you texting yourself?</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_summary">Sync interval</string>
    <string name="pref_sync_interval_title">Sync interval</string>
    <string name="pref_sync_interval_default_value">4</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="four_hours">4 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="daily">Daily</string>
    <string name="pref_enable_notifications_title">Enable notifications</string>
    <string name="preferences_category_notifications">Notifications</string>
    <string name="preferences_category_appearance">Appearance</string>
    <string name="preferences_category_server">Server</string>
    <string name="preferences_category_account">Account</string>
    <string name="dialog_title_delete_comment">Delete comment</string>
    <string name="dialog_title_delete_post">Delete post</string>
    <string name="dialog_title_discard_profile_changes">Discard changes</string>
    <string name="dialog_title_remove_friend">Remove friend</string>
    <string name="dialog_remove_friend">Remove %s as a friend?</string>
    <string-array name="pref_sync_interval_array">
        <item>@string/five_minutes</item>
        <item>@string/ten_minutes</item>
        <item>@string/fifteen_minutes</item>
        <item>@string/thirty_minutes</item>
        <item>@string/one_hour</item>
        <item>@string/two_hours</item>
        <item>@string/four_hours</item>
        <item>@string/twelve_hours</item>
        <item>@string/daily</item>
    </string-array>
    <string-array name="pref_sync_interval_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="pref_theme_array">
        <item>@string/light_theme</item>
        <item>@string/dark_theme</item>
        <item>@string/day_night_theme</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="nav_add_friend_actions">
        <item>Display QR Code</item>
        <item>Scan QR Code</item>
        <item>Send SMS Invite</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invites">Invites</string>
    <string name="nav_invites">Invites</string>
    <string name="accept_invite">Accept invite</string>
    <string name="accept_invite_dialog">Accept friend invite from %s?</string>
    <string name="fragment_accept_invite">fragment_accept_invite</string>
    <string name="notification_new_invite">You received a friend invite</string>
    <string name="has_requested_sms_invite_permission">has_requested_sms_invite_permission</string>
    <string name="dialog_title_sms_invite_permission">SMS friend invite</string>
    <string name="dialog_sms_invite_permission">A friend may add you with a text message (SMS). To allow or disallow this click OK.</string>
    <string name="qr_one_friend">Use a new QR code for each friend</string>
    <string name="invite_message">wants to be your friend.</string>
    <string name="dialog_title_invite_friend">Accept invite</string>
    <string name="dialog_button_dismiss">Dismiss</string>
</resources>
