<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:title="@string/nav_feed_title"
            android:icon="@drawable/ic_view_list_black_24dp"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile_title"
            android:icon="@drawable/ic_person_black_24dp"/>
        <item
            android:id="@+id/nav_friends"
            android:title="@string/nav_friends_title"
            android:icon="@drawable/ic_people_black_24dp"/>
        <item
            android:id="@+id/qr_code"
            android:title="@string/nav_qr_title"
            android:icon="@drawable/ic_qrcode_black_24dp"/>
        <item
            android:id="@+id/sms_allow_user"
            android:title="@string/nav_sms_title"
            android:icon="@drawable/ic_textsms_black_24dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings_title"
            android:icon="@drawable/ic_settings_black_24dp"/>
        <item
            android:id="@+id/delete_database"
            android:title="Clear all databases"
            android:icon="@drawable/ic_delete_black_24dp"/>
        <item
            android:id="@+id/edit_username"
            android:title="Edit Username"/>
        <item
            android:id="@+id/edit_api_key"
            android:title="Edit API Key"/>
    </group>

</menu>
