<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/welcome_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/create_account_vertical_padding"
        android:text="@string/create_account_welcome_message"
        android:textColor="@color/primary_text"
        style="@style/Base.TextAppearance.AppCompat.Display2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/display_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/hint_text"
                android:hint="@string/display_name_text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/api_key_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/api_key_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/hint_text"
                android:hint="@string/api_key_string"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:onClick="createAccountClick"/>
    </LinearLayout>
</LinearLayout>